# RetroArch

./: .gitignore  Makefile.ps3.salamander  gradle.properties  settings.gradle
audio/: audio_driver.c
frontend/drivers/: platform_linux.c
gfx/: video_driver.c
gfx/drivers_renderchain/: gl_legacy_renderchain.c
gfx/drivers_shader/: shader_glsl.c
griffin/: griffin1.c  griffin_back.c
input/: input_driver.c  input_driver.h  input_joypad_driver.c  input_overlay.c
input/drivers/: android_input.c  udev_input.c
input/drivers_joypad/: android_joypad.c
input/drivers_keyboard/: keyboard_event_android.c
menu/: menu_content.c  menu_displaylist.c  menu_driver.c  menu_setting.c
menu/cbs/: menu_cbs_deferred_push.c  menu_cbs_ok.c  menu_cbs_sublabel.c
menu/drivers/: materialui.c  xmb.c
menu/widgets/: menu_input_bind_dialog.c
network/netplay/: netplay_frontend.c  netplay_handshake.c  netplay_io.c  netplay_private.h  netplay_sync.c
phoenixas/: build.gradle  local.properties
phoenixas/src/main/: AndroidManifest.xml
phoenixas/src/main/cpp/: CMakeLists.txt
phoenixas/src/main/jni/: Android.mk  Android_back.mk  Application.mk
tasks/: task_content.c  task_database_cue.c  task_decompress.c  task_http.c  task_netplay_find_content.c  task_patch.c
